# fencing-260405

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
_main/: CMakeLists.txt  app_config.h  app_hw.h  backup.c  idf_component.yml  screen_menu.c  screen_menu.h  screen_speed_test.h  screen_training.c  walker_splash.h
main/: CMakeLists.txt  app_hw.c  app_input.h  app_state.h  display_setup.c  display_setup.h  hello_world_main.c  main.c  screen_menu.c  screen_speed_test.c  screen_training.c  screen_training.h  walker_splash.c
scripts/: gen_walker_splash.py
